[package]
name = "aget-rs"
version = "0.4.1"
authors = ["PeterDing <dfhayst@gmail.com>"]
homepage = "https://github.com/PeterDing/aget-rs"
description="Aget-rs - Fast Asynchronous Downloader with Rust 🦀"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "asynchronous", "download"]
keywords = [
    "download",
    "network",
    "asynchronous",
    "tool",
]
edition = "2021"

[lib]
name = "aget"
path = "src/lib.rs"

[[bin]]
name = "ag"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for async
futures = "0.3"
actix-rt = "2.9"

# for http
http = "1.0"
url = "2.5"
reqwest = { version = "0.11", features = ["default", "stream", "gzip", "brotli", "deflate"] }

# for errors
thiserror = "1.0"

# for crypto
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }

# utilities
term_size = "0.3"
ansi_term = "0.12"
percent-encoding = "2"
bytes = "1"
clap = { version = "4", features = ["derive", "cargo"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

# for m3u8
m3u8-rs = "5"

# for tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["default", "time", "local-time", "registry"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
rand = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
