[package]
name = "aget-rs"
version = "0.6.3"
authors = ["PeterDing <dfhayst@gmail.com>"]
homepage = "https://github.com/PeterDing/aget-rs"
description = "Aget-rs - Fast Asynchronous Downloader with Rust 🦀"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "asynchronous", "download"]
keywords = ["download", "network", "asynchronous", "tool"]
edition = "2021"

[lib]
name = "aget"
path = "src/lib.rs"

[[bin]]
name = "ag"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for async
futures = "0.3"
actix-rt = "2.10"

# for http
http = "1.1"
url = "2.5"
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "stream",
  "gzip",
  "brotli",
  "deflate",
], default-features = false }

# for errors
thiserror = "2.0"

# for crypto
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }

# utilities
term_size = "0.3"
ansi_term = "0.12"
percent-encoding = "2"
bytes = "1"
clap = { version = "4", features = ["derive", "cargo"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

# for m3u8
m3u8-rs = "6"

# for torrent
librqbit = { git = "https://github.com/ikatson/rqbit.git", rev = "b9f949c", features = [
  "rust-tls",
], default-features = false }

# for tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "default",
  "time",
  "local-time",
  "registry",
] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
